--- a/task5/task.css
+++ b/task5/task.css
@@ -35,43 +35,44 @@ header {
     width: 71px;
     margin: 43px 0 0 15px;
 }
-.name {
+.Name-column{
     float: left;
+}
+.name {
     margin: 67px 0 0 25px;
     letter-spacing: 1px;
     color: aliceblue;
 
 }
 .icon-text {
-    position: absolute;
-    margin-top: 91px;
-    margin-left: 111px;
+    
 }
 
 .icon {
+    margin: 0 0 0 19px;
     float: left;
     width: 11px;
 }
 
 .address {
-    width: 133px;
+    margin: 0 0 0 30px;
     letter-spacing: 2px;
     font-size: 13px;
     color: aliceblue;
 }
 main input {
-    border-width: 0 2px;
     margin: 17px 8px;
     padding: 0 10px;
+    border-width: 0 2px;
     border-right: 0;
     border-color: rgba(95, 192, 205, 1);
 }
 
 .info {
     display: flex;
-    border-width: 1px 0;
     padding: 15px 0;
     height: 16px;
+    border-width: 1px 0;
     border-style: inset;
     align-items: center;
 }
@@ -146,7 +147,7 @@ footer {
     width: 50vw;
     border-radius: 10px;
     text-align: center;
-    border-style: groove;
+    border-style: solid;
     border-color: rgba(95, 192, 205, 1);
 }
 
