--- a/task5/task.css
+++ b/task5/task.css
@@ -25,8 +25,9 @@ header {
     color: aliceblue;
 }
 .background-image {
+    position: relative;
     height: 10em;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-image: url(logo2.png);
 }
@@ -35,16 +36,18 @@ header {
     width: 71px;
     margin: 43px 0 0 15px;
 }
-.Name-column{
-    float: left;
+.name-column{
+    position: absolute;
+    top: 53px;
+    left:98px;
 }
 .name {
-    margin: 67px 0 0 25px;
     letter-spacing: 1px;
     color: aliceblue;
 
 }
 .icon-text {
+    margin: 0 0 0 -20px;
     
 }
 
